--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,280 @@
-build/*
-.DS_Store
-.idea/
+# Fluffy Diver PS Vita Port - Git Ignore File
+
+# Build directories and files
+build/
+build-*/
 cmake-build-*/
-lib/libc_bridge/out/
-apk/
-assets/*
+CMakeFiles/
+CMakeCache.txt
+cmake_install.cmake
+Makefile
+*.make
+*.cmake
+!CMakeLists.txt
+!*.cmake.in
+
+# VitaSDK build outputs
+*.vpk
+*.velf
+*.self
+*.skprx
+*.suprx
+eboot.bin
+param.sfo
+
+# Object files and libraries
+*.o
+*.a
+*.so
+*.so.*
+*.dylib
+*.lib
+*.dll
+*.exe
+
+# Game-specific files (from APK - don't commit copyrighted content)
+lib/libFluffyDiver.so
 libFluffyDiver.so
+
+# Asset files (from APK - don't commit copyrighted content)
+data/
+assets/
+*.hgg
+*.spr
+*.hif
+*.hdm
+*.yfont
+*.dat
+
+# Temporary and backup files
+*~
+*.bak
+*.tmp
+*.temp
+*.swp
+*.swo
+.#*
+#*#
+
+# IDE and editor files
+.vscode/
+.idea/
+*.vcxproj*
+*.sln
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# macOS specific
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon?
+._*
+.Spotlight-V100
+.Trashes
+
+# Windows specific
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux specific
+*~
+.directory
+.Trash-*
+
+# Logs and debug files
+*.log
+*.out
+*.err
+debug.txt
+crash.log
+vitaGL.log
+
+# APK extraction temporary files
+apk/
+apk_extracted/
+*.apk
+res.zip
+extracted/
+temp/
+
+# Analysis files (may contain copyrighted content)
+analysis_*.tar.gz
+analysis_*.log
+PORTING_ANALYSIS.md
+IMPLEMENTATION_GUIDE.md
+generated_falsojni.*
+
+# Package manager files
+*.deb
+*.rpm
+*.pkg
+*.dmg
+
+# Compressed files
+*.zip
+*.tar.gz
+*.tar.bz2
+*.tar.xz
+*.7z
+*.rar
+
+# Development tools
+.clang-format
+.clang-tidy
+compile_commands.json
+*.gcno
+*.gcda
+*.gcov
+
+# Test files
+test_*
+*_test
+tests/
+test_results/
+
+# Documentation build
+docs/build/
+site/
+
+# Python (if using any build scripts)
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+.env
+.venv
+
+# Node.js (if using any build tools)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Backup files from editors
+*.orig
+*.rej
+*.bak
+*.backup
+
+# Profiling and debugging
+gmon.out
+*.prof
+*.pdb
+*.idb
+*.ilk
+*.map
+*.dmp
+
+# Custom build scripts output
+install/
+dist/
+release/
+debug/
+
+# Game data that shouldn't be committed
+save/
+saves/
+config/
+settings/
+user_data/
+
+# LibreOffice locks
+.~lock.*
+
+# Vim
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+
+# Emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# JetBrains
+.idea/
+*.iml
+*.ipr
+*.iws
+out/
+
+# Visual Studio Code
+.vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# TextMate
+*.tmproj
+*.tmproject
+tmtags
+
+# Xcode
+*.xcodeproj
+*.xcworkspace
+xcuserdata/
+*.xccheckout
+*.moved-aside
+DerivedData/
+*.hmap
+*.ipa
+
+# Android Studio / IntelliJ
+.gradle/
+local.properties
+.idea/
+*.iml
+*.ipr
+*.iws
+.idea_modules/
+atlassian-ide-plugin.xml
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+
+# Eclipse
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
+.project
+.classpath
+.c9/
+*.launch
+.buildpath
+.target
+
+# NetBeans
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
